play-pit/CICD/MinIO-S3/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio-s3
  labels:
    name: minio-s3
