play-pit/CICD/MinIO-S3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # This name uniquely identifies the Deployment
  name: minio-deployment
  labels:
    app: minio-s3storage
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: "minio-s3storage"
  template:
    metadata:
      labels:
        # Label is used as selector in the service.
        app: "minio-s3storage"
    spec:
      containers:
      - name: minio
        # Pulls the default MinIO image from Docker Hub
        image: minio/minio
        imagePullPolicy: "IfNotPresent"
        args:
        - server
        - /storage
        ports:
        - containerPort: 9000
        # Mount the volume into the pod
        volumeMounts:
        - name: s3-storage
          mountPath: /s3-storage
      volumes:
      - name: s3-storage
        persistentVolumeClaim:
          claimName: s3-storage-claim
