play-pit/CICD/MinIO-S3/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: minio-s3-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
  - hosts:
    - s3.kx-as-code.local
  rules:
  - host: s3.kx-as-code.local
    http:
      paths:
       - path: /
         backend:
           serviceName: minio-service
           servicePort: 9000
